# openvpn_dart

./: LICENSE  README.md  pubspec.yaml  setup_openvpn_android.sh  setup_openvpn_binary.sh
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: openvpn3_integration.cpp  openvpn3_integration.hpp  openvpn_client.cpp  openvpn_client.h  openvpn_jni.cpp  openvpn_protocol.cpp  openvpn_protocol.hpp  openvpn_tls.cpp  openvpn_tls.hpp  tun_packet_loop.hpp
android/src/main/kotlin/com/mysteriumvpn/openvpn_dart/: ActivityNotAttachedException.kt  NotificationHelper.kt  NotificationPermission.kt  NotificationPermissionCallback.kt  NotificationPermissionManager.kt  OpenVPNBackend.kt  OpenVPNService.kt  OpenVpnJni.kt  OpenVpnManagementThread.kt  OpenvpnDartPlugin.kt  PermissionRequestCancelledException.kt  VPNLaunchHelper.kt  VPNManager.kt
android/src/test/kotlin/com/mysteriumvpn/openvpn_dart/: OpenvpnDartPluginTest.kt
darwin/: openvpn_dart.podspec
darwin/Classes/: OpenvpnDartPlugin.swift
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts
example/android/app/: build.gradle.kts
example/ios/: Podfile
example/ios/Runner/: Info.plist  RunnerDebug.entitlements
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/ios/VPNExtension/: VPNExtension.entitlements  VPNExtensionDebug.entitlements
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
lib/: openvpn_dart.dart  vpn_status.dart
scripts/: build_openvpn3_core.sh  build_openvpn_aar.sh  download_openvpn.ps1  setup_openssl_android.sh  setup_openvpn_android.sh
windows/: CMakeLists.txt  openvpn_dart_plugin.cpp  openvpn_dart_plugin.h  openvpn_dart_plugin_c_api.cpp
windows/test/: openvpn_dart_plugin_test.cpp
(+16 files in other folders)
